# insurance-recurrent

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: insurance_recurrent_demo.py
src/insurance_recurrent/: __init__.py  _types.py  data.py  diagnostics.py  frailty.py  joint.py  report.py  simulator.py
tests/: conftest.py  test_data.py  test_diagnostics.py  test_frailty.py  test_joint.py  test_report.py  test_simulator.py
