[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-recurrent"
version = "0.1.0"
description = "Shared frailty models for within-policyholder claim recurrence in insurance pricing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Burning Cost", email = "pricing.frontier@gmail.com"},
]
keywords = ["insurance", "actuarial", "survival-analysis", "frailty", "recurrent-events"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "typing_extensions>=4.0",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
report = [
    "jinja2>=3.1",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-recurrent"
Repository = "https://github.com/burning-cost/insurance-recurrent"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_recurrent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
